--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <h3>Original</h3>
             <canvas></canvas>
           </div>
-          <div class="nulled" style="display: none;">
-            <h3>Normalized</h3>
+         <!-- <div class="nulled" style="display: none;">
+            <h3>Normalized</h3> -->
             
           </div>
           <div class="message" style="display: none;">
