--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <h3>Original</h3>
             <canvas></canvas>
           </div>
-         <!-- <div class="nulled" style="display: none;">
-            <h3>Normalized</h3> -->
-            
+         <div class="nulled" style="display: none;">
+            <h3>Normalized</h3> 
+            <canvas></canvas>
           </div>
           <div class="message" style="display: none;">
             <h3>Message hidden in image (right click <span class="glyphicon glyphicon-arrow-right"></span> save as)</h3>
