--- a/index.html
+++ b/index.html
@@ -94,6 +94,6 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  
+  <script type="text/JavaScript" src="script.js"></script>
 </body>
 </html>
